--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,10 @@
     <string name="i_accept">I Accept</string>
 
 
-
     <string name="full_name">Full Name</string>
     <string name="mobile_no">Mobile No</string>
     <string name="password">Password</string>
     <string name="confirm_password">Confirm Password</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
