--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,15 @@
     <string name="confirm_password">Confirm Password</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+
+    <string name="wellcome_login">welcome to unique platform created to empower farmers in india</string>
+
+    <string name="username">Username</string>
+
+    <string name="forget_password">Forget Password ?</string>
+    <string name="create_account">Create a new account</string>
+    <string name="signup">Signup</string>
+
+
 </resources>
