--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,6 +23,8 @@
     <string name="forget_password">Forget Password ?</string>
     <string name="create_account">Create a new account</string>
     <string name="signup">Signup</string>
+    <string name="please_wait">Please Wait...</string>
+    <string name="loading">Loading</string>
 
 
 </resources>
